:art: ADD Categories & Pages

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -3,3 +3,4 @@
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
 
 <!-- end custom head snippets -->
+<link href='//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css' rel='stylesheet' type='text/css'>
