:art: Update Masthead__main style

--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -236,26 +236,33 @@
 
     a {
       position: relative;
+      width: 60px;
+      text-align: center;
+      transition: text-shadow .3s;
 
-      &:before {
-        content: "";
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        height: 4px;
-        background: $primary-color;
-        width: 100%;
-        -webkit-transition: $global-transition;
-        transition: $global-transition;
-        -webkit-transform: scaleX(0) translate3d(0, 0, 0);
-        transform: scaleX(0) translate3d(0, 0, 0); // hide
+      &:hover{
+        text-shadow: 0 0 .85px #333, 0 0 .85px #333;
       }
 
-      &:hover:before {
-        -webkit-transform: scaleX(1);
-        -ms-transform: scaleX(1);
-        transform: scaleX(1); // reveal
-      }
+      // &:before {
+      //   content: "";
+      //   position: absolute;
+      //   left: 0;
+      //   bottom: 0;
+      //   height: 4px;
+      //   background: $primary-color;
+      //   width: 100%;
+      //   -webkit-transition: $global-transition;
+      //   transition: $global-transition;
+      //   -webkit-transform: scaleX(0) translate3d(0, 0, 0);
+      //   transform: scaleX(0) translate3d(0, 0, 0); // hide
+      // }
+
+      // &:hover:before {
+      //   -webkit-transform: scaleX(1);
+      //   -ms-transform: scaleX(1);
+      //   transform: scaleX(1); // reveal
+      // }
     }
   }
 
