--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -20,9 +20,9 @@
     @include clearfix;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 2em;
+    margin-top: 1.2em;
     max-width: 100%;
-    padding: 0 1em 2em;
+    padding: 0 1em 1.2em;
 
     @include breakpoint($x-large) {
       max-width: $x-large;
@@ -75,7 +75,7 @@
 
   a {
     padding-right: 10px;
-    font-weight: bold;
+    font-weight: 400;
   }
 
   .social-icons {
