--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -84,6 +84,11 @@ $yiq-contrasted-light-default: #fff !default;
 $yiq-contrasted-threshold: 175 !default;
 $yiq-debug: false !default;
  
+// cunguri colors
+$chunguri-black: #000 !default;
+$chunguri-gray: #404040 !default;
+$chunguri-orange: #fa815a !default;
+
 /* brands */
 $behance-color: #1769ff !default;
 $bitbucket-color: #205081 !default;
