--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,10 +1,13 @@
 ---
-layout: archive
+layout: default
 ---
 
 {{ content }}
 
-{% comment %} <h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
+
+{% comment %}
+
+<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts | default: "Recent Posts" }}</h3>
 
 {% if paginator %}
   {% assign posts = paginator.posts %}
